# CHANGES TO v0.3.19 #

 * Added a `gather_attrs()` function that moves variable-level attributes to the data.frame level. (#80)

# CHANGES TO v0.3.18 #

 * Added support for export to HTML tables. (#86)

# CHANGES TO v0.3.17 #

 * Fixed a bug in import from remote URLs with incorrect file extensions.

# CHANGES TO v0.3.16 #

 * Added support for import from fixed-width format files via `readr::read_fwf()` with a specified `widths` argument. This may enable faster import of these types of files and provides a base-like interface for working with readr. (#48)

# CHANGES TO v0.3.15 #

 * Added support for import from and export to yaml. (#83)
 * Fixed a bug when reading from an uncommented CSVY yaml header that contained single-line comments. (#84, h/t Tom Aldenberg)

# CHANGES TO v0.3.14 #

 * Diagnostic messages were cleaned up to facilitate translation. (#57)

# CHANGES TO v0.3.12 #

 * `.import()` and `.export()` are now exported S3 generics and documentation has been added to describe how to write rio extensions for new file types. An example of this functionality is shown in the new suggested "rio.db" package.

# CHANGES TO v0.3.11 #

 * `import()` now uses xml2 to read XML structures and `export()` uses a custom method for writing to XML, thereby negating dependency on the XML package. (#67)
 * Enhancements were made to import and export of CSVY to store attribute metadata as variable-level attributes (like imports from binary file formats).
 * `import()` gains a `which` argument that is used to select which file to return from within a compressed tar or zip archive.
 * Export to tar now tries to correct for bugs in `tar()` that are being fixed in base R via [PR#16716](https://bugs.r-project.org/bugzilla/show_bug.cgi?id=16716).

# CHANGES TO v0.3.10 #

 * Fixed a bug in `import()` (introduced in #62, 7a7480e5) that prevented import from clipboard. (h/t Kevin Wright)
 * `export()` returns a character string. (#82)

# CHANGES TO v0.3.9 #
