@@ -1,6 +1,7 @@
 # CHANGES TO v0.3.19 #
 
  * Added a `gather_attrs()` function that moves variable-level attributes to the data.frame level. (#80)
+ * Added preliminary support for import from HTML tables (#86)
 
 # CHANGES TO v0.3.18 #
 
